--- a/Pages/style.css
+++ b/Pages/style.css
@@ -1,3 +1,13 @@
+/* css style sheet */
+
+/* body */ 
+body { 
+    background-image: url("https://pixabay.com/users/gdj-1086657/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3244166");
+    height: 850px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 
 .nav {
