--- a/Pages/style.css
+++ b/Pages/style.css
@@ -1,7 +1,7 @@
 
 /* Body */
 body {
-    background-image: url("https://c.wallhere.com/photos/1d/62/futuristic_cityscape_futuristic_city-215283.jpg!d");
+    background-image: url("https://pixabay.com/images/id-1282314/");
     height: 850px;
     background-position: center;
     background-repeat: no-repeat;
