--- a/Pages/style.css
+++ b/Pages/style.css
@@ -1,7 +1,7 @@
 
 /* Body */
 body {
-    background-image: url("https://pixabay.com/images/id-1282314/");
+    background-image: url("https://cdn.pixabay.com/photo/2016/03/27/07/32/clouds-1282314_960_720.jpg");
     height: 850px;
     background-position: center;
     background-repeat: no-repeat;
