--- a/Pages/style.css
+++ b/Pages/style.css
@@ -1,5 +1,5 @@
 
-/* Body */
+/* body */
 body {
     background-image: url("https://cdn.pixabay.com/photo/2016/03/27/07/32/clouds-1282314_960_720.jpg");
     height: 850px;
@@ -7,3 +7,6 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
   }
+
+  /* nav bar */
+  
