--- a/Pages/style.css
+++ b/Pages/style.css
@@ -25,3 +25,48 @@ body {
     font-size: 12px; 
  
   }
+
+
+a {
+    color: #E7E7E7;
+    font-size: 15px;
+  }
+  
+  /* images */
+  img{
+    width:100% !important;
+    height:100% !important;
+  }
+  .active, .panel:hover {
+    border-color: cornflowerblue;
+    border-style: solid;
+    
+  }
+  .vizualization {
+    width:50% !important;
+    height:50% !important;
+  }
+  
+  /* Title */
+  .title {
+    color:cornflowerblue;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-weight: normal;
+    padding-top: 10px;
+  }
+  
+  /* Paragraph */
+  p {
+  color: gray;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  }
+  
+  /* Box */
+  .box {
+    margin-top: 50px;
+    margin-bottom: 60px;
+    padding: 10px 30px 10px;
+    color: cornflowerblue;
+    background-color: white;
+  }
