--- a/Pages/style.css
+++ b/Pages/style.css
@@ -18,7 +18,7 @@ body {
     padding: inherit;
     font-weight: normal;
     background-color: white;
-    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-family: "American Typewriter", serif;
   }
   .navbar {
     background-color: white;
@@ -50,15 +50,15 @@ a {
   /* Title */
   .title {
     color:cornflowerblue;
-    font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-weight: normal;
+    font-family: "American Typewriter", serif;
+    font-weight: bold;
     padding-top: 10px;
   }
   
   /* Paragraph */
   p {
   color: gray;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "American Typewriter", serif;
   font-size: 15px;
   }
   
