--- a/Pages/style.css
+++ b/Pages/style.css
@@ -68,7 +68,7 @@ a {
     margin-bottom: 60px;
     padding: 10px 30px 10px;
     color: cornflowerblue;
-    background-color: whitesmoke;
+    background-color: white;
   }
 
   /* footer */
