--- a/Pages/style.css
+++ b/Pages/style.css
@@ -76,9 +76,9 @@ footer {
     background-color:cornflowerblue;
     border-top-style: solid;
     border-top-width: 2px;
-    border-top-color:white;
+    border-top-color:whitesmoke;
     color: white;
-    min-height: 60px;
+    min-height: 40px;
     font-family: "American Typewriter", serif;
     font-size: 10px;
     text-align: center;
