--- a/Pages/style.css
+++ b/Pages/style.css
@@ -88,3 +88,10 @@ footer {
     width: 100%;
     padding-top: 15px;
     }
+
+/* table */ 
+.table {
+    font-size: 12px;
+    font-family: "American Typewriter", serif;
+    border-top-color: white !important;
+  }
