--- a/Pages/style.css
+++ b/Pages/style.css
@@ -96,4 +96,6 @@ footer {
     border-top-color: white !important;
     color: cornflowerblue;
     background-color: white;
+    border-color: cornflowerblue;
+    border-style: solid;
   }
